# DICOM-RST

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile-s3  README.md  config.toml  deny.toml  recipe.json
.github/workflows/: build-docs.yml  docker-publish.yml  rust-checks.yml
debug/: README.md  docker-compose.yml  orthanc.json
debug/simple-setup/: dicom-rst.yaml  orthanc.json
dicom-rst-plugin-api/: Cargo.toml
dicom-rst-plugin-api/src/: lib.rs  qido.rs  stow.rs  streaming.rs  types.rs  wado.rs
docs/: configuration.md  dimse.md  drst.tree  v.list  writerside.cfg
docs/cfg/: buildprofiles.xml
docs/resources/: openapi.yaml
docs/topics/: backend-dimse.md  backend-s3.md  backends.md  configuration.md  endpoints-dicom-rst.md  endpoints-dicomweb.md  installing.md  introduction.md  troubleshooting.md  usage-guide.md
example-plugin/: Cargo.toml
example-plugin/src/: lib.rs
examples/simple-setup/: dicom-rst.yaml  docker-compose.yaml
src/: config.rs  defaults.toml  main.rs  pool.rs  pooling.rs  qido.rs  types.rs  wado.rs
src/api/: aets.rs  common.rs  home.rs  mod.rs  qido.rs  wado.rs
src/api/asdo/: mod.rs  routes.rs  service.rs
src/api/mwl/: mod.rs  routes.rs  service.rs
src/api/qido/: mod.rs  routes.rs  service.rs
src/api/stow/: mod.rs  routes.rs  service.rs
src/api/wado/: routes.rs  service.rs
src/backend/: mod.rs
src/backend/dimse/: mod.rs  mwl.rs  qido.rs  stow.rs  wado.rs
src/backend/dimse/association/: client.rs  mod.rs  pool.rs  server.rs
src/backend/dimse/cecho/: echoscu.rs  mod.rs
src/backend/dimse/cfind/: findscu.rs  mod.rs
src/backend/dimse/cmove/: mediator.rs  mod.rs  movescu.rs
src/backend/dimse/cstore/: mod.rs  storescp.rs  storescu.rs
src/backend/plugin/: adapters.rs  mod.rs  registry.rs
src/backend/s3/: mod.rs  wado.rs
src/config/: defaults.toml  defaults.yaml  mod.rs
src/dimse/: cecho.rs  cfind.rs  cget.rs  mod.rs
src/pool/: connection.rs  mod.rs
src/rendering/: mod.rs
src/utils/: multipart.rs
tests/: stow.rs
tests/common/: mod.rs
