[package]
name = "dicom-rst"
version = "0.3.0-beta.1"
description = "A robust DICOMweb server with swappable backend"
edition = "2021"
rust-version = "1.74.0"
categories = [
  "multimedia",
  "network-programming",
  "web-programming::http-server",
]
keywords = ["dicom", "dicomweb", "healthcare", "medical"]
repository = "https://github.com/UMEssen/DICOM-RST"
license = "MIT"
readme = "README.md"

[features]
default = ["dimse", "s3"]
dimse = []
# TODO: feature-gate S3 dependencies
s3 = []

[dependencies]
# DICOM processing
dicom = "0.8.1"
dicom-json = "0.8.1"
dicom-pixeldata = { version = "0.8.1", features = ["image"] }
sentry = { version = "0.37.0", features = ["tracing"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
# Convenient error handling
thiserror = "2.0.12"
anyhow = "1.0.98"

tokio = { version = "1.44.2", features = ["full"] }
config = { version = "0.15.11", features = ["toml"] }
axum = { version = "0.8.3", features = ["multipart", "macros"] }
axum-extra = { version = "0.10.1", features = ["query"] }
axum-streams = { version = "0.21.0", features = ["json"] }
futures = "0.3.31"
mime = "0.3.17"
tower-http = { version = "0.6.2", features = ["trace", "cors", "timeout"] }
tower = { version = "0.5.2", features = ["limit"] }
async-trait = "0.1.88"
async-stream = "0.3.6"
uuid = { version = "1.16.0", features = ["v4"] }
bytes = "1.10.1"
multer = "3.1.0"
pin-project = "1.1.10"
# S3 backend
aws-config = { version = "1.6.2", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.83.0"
aws-credential-types = "1.2.3"

[lints.rust]
unsafe_code = "forbid"
renamed_and_removed_lints = "allow"
async-fn-in-trait = "allow"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "debuginfo"
