[package]
name = "dicom-rst"
version = "0.3.0-beta.5"
description = "A robust DICOMweb server with swappable backend"
edition = "2021"
rust-version = "1.91.0"
categories = [
    "multimedia",
    "network-programming",
    "web-programming::http-server",
]
keywords = ["dicom", "dicomweb", "healthcare", "medical"]
repository = "https://github.com/UMEssen/DICOM-RST"
license = "MIT"
readme = "README.md"

[features]
default = []
s3 = ["dep:aws-config", "dep:aws-sdk-s3", "dep:aws-credential-types"]

[dependencies]
# DICOM processing
dicom = "0.9.0"
dicom-json = "0.9.0"
dicom-pixeldata = { version = "0.9.0", features = ["image"] }
sentry = { version = "0.45.0", features = ["tracing"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
# Convenient error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

tokio = { version = "1.48.0", features = ["full"] }
config = { version = "0.15.18", features = ["toml"] }
axum = { version = "0.8.6", features = ["multipart", "macros"] }
axum-extra = { version = "0.10.3", features = ["query"] }
axum-streams = { version = "0.23.1", features = ["json"] }
futures = "0.3.31"
mime = "0.3.17"
tower-http = { version = "0.6.6", features = ["trace", "cors", "timeout", "normalize-path"] }
tower = { version = "0.5.2", features = ["limit"] }
url = "2.5.7"
async-trait = "0.1.89"
async-stream = "0.3.6"
uuid = { version = "1.18.1", features = ["v4"] }
bytes = "1.10.1"
multer = "3.1.0"
pin-project = "1.1.10"
image = { version = "0.25.8", features = ["png", "jpeg", "gif"] }
# S3 backend
aws-config = { version = "1.8.14", features = ["behavior-version-latest"], optional = true }
aws-sdk-s3 = { version = "1.124.0", optional = true }
aws-credential-types = { version = "1.2.13", optional = true }

[lints.rust]
unsafe_code = "forbid"
renamed_and_removed_lints = "allow"
async-fn-in-trait = "allow"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
cargo = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
lint_groups_priority = "allow"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "debuginfo"
