[package]
name = "dicom-rst-plugin-api"
version = "0.1.0"
edition = "2021"
description = "Plugin API for DICOM-RST DICOMweb server"
license = "MIT"
repository = "https://github.com/UMEssen/DICOM-RST"

[features]
default = []

[dependencies]
abi_stable = "0.11"
async-ffi = { version = "0.5", features = ["abi_stable"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[lints.rust]
# unsafe_code is required for FFI with abi_stable
unsafe_code = "allow"

[lints.clippy]
pedantic = "warn"
nursery = "warn"
# Allow non-local definitions from abi_stable macros
non_local_definitions = "allow"
