[package]
name = "dicom-rst-example-plugin"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Example plugin for DICOM-RST demonstrating the plugin API"

[lib]
crate-type = ["cdylib"]

[dependencies]
dicom-rst-plugin-api = { path = "../dicom-rst-plugin-api" }
abi_stable = "0.11"
async-ffi = { version = "0.5", features = ["abi_stable"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
